--- a/styles/modules/_hero.css
+++ b/styles/modules/_hero.css
@@ -26,7 +26,7 @@
   }
 
   &--content {
-    @apply w-full max-w-5xl mx-auto px-4 text-left text-pageText absolute bottom-0;
+    @apply w-full max-w-5xl mx-auto text-left text-pageText absolute bottom-0;
     padding-top: calc(var(--headerHeight) + 2rem);
     /* padding-bottom: var(--headerHeight); */
   }
